modifying for push github

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav></nav>
 		<header></header>
-		<main></main>
+		<main>Change to be pushed</main>
 		<footer></footer>
 	</body>
 </html>
